# pronokif

./: .dockerignore  .gitignore  .gitleaks.toml  00_READ_ME_FIRST.md  AGENTS.md  AUDIT_V0.2.md  AUDIT_V0.3.md  AUDIT_V0.4.md  AUDIT_V0.5.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  Makefile  RAPPORT_MISSION_V2.md  README.md  ROADMAP_12MONTH.md  SECURITY.md  SECURITY_AUDIT.md  backend_test.py  design_guidelines.json  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  REFACTORING_GUIDE.md  audit_serveur_doublons.md  config.py  drivers_data.py  features.py  pyproject.toml  requirements-dev.txt  requirements.txt  seed_demo.py  server.py  server_backup.py  server_new.py  server_refactored.py
backend/data/: __init__.py  avatars.py  circuit_geometry.json  circuit_maps.py  drivers_data.py  f1_data.py  f1_knowledge.py  missions.py
backend/middleware/: __init__.py  security.py
backend/models/: __init__.py  schemas.py
backend/routes/: admin_activity_logs.py  admin_auth.py  admin_backoffice.py  admin_championships.py  admin_content.py  admin_data.py  admin_drivers.py  admin_feedbacks.py  admin_invitations.py  admin_knowledge.py  admin_leagues.py  admin_legal_pages.py  admin_media.py  admin_members.py  admin_predictions.py  admin_races.py  admin_settings.py  admin_sync.py  admin_translations.py  admin_users.py  auth.py  avatars.py  custom_predictions.py  drivers.py  feedback.py  health.py  leaderboards.py  leagues.py  legal.py  minigames.py  notifications.py  predictions.py  profile.py  races.py  results.py
backend/scripts/: generate_circuit_traces.py  send_admin_launch_email.py
backend/services/: admin.py  admin_activity.py  admin_championships.py  admin_csv.py  admin_feedbacks.py  admin_invitations.py  admin_leagues.py  admin_members.py  admin_predictions.py  admin_races.py  admin_users.py  auth.py  avatars.py  cagnotte.py  championships.py  circuit_maps.py  custom_prediction_scoring.py  drivers.py  email.py  email_templates.py  feedback.py  image_processing.py  indexes.py  knowledge_seed.py  leaderboards.py  league_membership.py  legal_content.py  notifications.py  predictions.py  profile.py  race_calendar.py  results.py  scoring.py  scoring_reconciliation.py  sync.py  sync_background.py  translations_registry.py
backend/tests/: conftest.py  test_admin_activity_service.py  test_admin_championships_service.py  test_admin_content.py  test_admin_data.py  (+39 more)
(+454 files in other folders)
