[project]
name = "pronokif-backend"
version = "0.1.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "N"]
ignore = [
    "B008",   # function-call-in-default-argument — FastAPI Depends() pattern
    "E712",   # comparison-to-true/false — tests use `== True` for API assertions
]

[tool.ruff.lint.per-file-ignores]
"data/drivers_data.py" = ["E501"]   # data literals, long lines OK
"data/avatars.py" = ["E501"]        # data literals, long lines OK
"data/missions.py" = ["E501"]       # data literals, long lines OK
"features.py" = ["E501"]            # mission/avatar definitions
"data/f1_data.py" = ["E501"]        # race/driver data
"tests/*" = ["E501"]                # test assertions can be verbose
"services/sync.py" = ["E501"]       # deeply chained API response parsing
"services/sync_background.py" = ["E501"]  # background sync persistence blocks can be verbose
"services/email_templates.py" = ["E501"]  # HTML email templates have long inline lines
"routes/races.py" = ["E501"]        # ISO date string construction
"routes/admin_data.py" = ["UP045"]  # legacy admin DTOs kept stable for now
"server.py" = ["E402", "I001"]      # route imports intentionally happen after Sentry setup
